--- a/server-side/voorbeeldexamen/templates/add.twig
+++ b/server-side/voorbeeldexamen/templates/add.twig
@@ -10,6 +10,7 @@
 		<div class="row">
 			<div class="col-xxs-10 col-xxs-offset-1 col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
 
+				{% include 'formerrors.twig' %}
 				
 				<form action="add.php" method="post" role="form" enctype="multipart/form-data">
 					<div class="well">
@@ -21,22 +22,25 @@
 						</div>
 						<div class="form-group">
 							<label for="title">Title</label>
-							<input class="form-control" type="text" name="title" id="title" value="" autocomplete="off" placeholder="Title of the book" maxlength="255" />
+							<input class="form-control" type="text" name="title" id="title" value="{{ title }}" autocomplete="off" placeholder="Title of the book" maxlength="255" />
 						</div>
 						<div class="form-group">
 							<label for="title">Number of pages</label>
-							<input class="form-control" type="number" name="numpages" id="numpages" value="" autocomplete="off" placeholder="Number of pages" maxlength="4" />
+							<input class="form-control" type="number" name="numpages" id="numpages" value="{{ numpages }}" autocomplete="off" placeholder="Number of pages" maxlength="4" />
 						</div>
 						<div class="form-group">
 							<label for="topic_id">topic</label>
 							<select name="topic_id" id="topic_id" class="form-control">
 								<option value="0">Choose &hellip;</option>
-															<option value="5">DevOps</option>
-															<option value="2">JavaScript</option>
-															<option value="3">Node</option>
-															<option value="1">PHP</option>
-															<option value="4">Ruby on Rails</option>
-														</select>
+								{% for topic in topics %}
+									{% if topic.id == topic_id %}
+										<option selected value="{{ topic.id }}">
+									{% else %}
+										<option value="{{ topic.id }}">
+									{% endif %}
+									{{ topic.title }}</option>
+								{% endfor %}
+							</select>
 						</div>
 						<input type="hidden" name="moduleAction" value="add" />
 						<button class="btn btn-lg btn-primary btn-block" type="submit">Add book</button>
@@ -46,4 +50,8 @@
 		</div>
 
 		</div>
+{% endblock %}
+	
+{% block jslink %}
+	<script src="js/bootstrap-filestyle.bs3.js"></script>
 {% endblock %}
